[package]
name = "stm32h750vb-examples"
version = "0.1.0"
authors = ["Mariusz Jurgielewicz <mordor@mail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"
panic-probe = "0.3.2"


[dependencies.stm32h7xx-hal]
version = "0.16.0"
features = ["stm32h750v", ]

[dev-dependencies]
st7735-lcd = "0.10.0"
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
tinybmp = "0.6.0"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
embedded-hal-bus = "0.2.0"
embedded-hal-compat = "0.13.0"


# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
