[package]
name = "stm32h750vb-examples"
version = "0.1.0"
authors = ["Mariusz Jurgielewicz <mordor@mail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embedded-hal = "1.0.0"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h750v", "sdmmc", "embedded-sdmmc", "sdmmc-fatfs", "usb_hs"] }
pmsx003 = "1.0.0"
nb = "1.1.0"
embedded-io = "0.6.0"

[dev-dependencies]
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
tinybmp = "0.6.0"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
cortex-m-rtic = "1.1"
embedded-hal-bus = "0.2.0"
embedded-hal-compat = "0.13.0"
embedded-sdmmc = "0.5.0"
bme280 = "0.5.0"
ssd1306 = "0.9.0"
heapless = "0.8.0"

[profile.dev]
opt-level = "s"

[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
